--- a/Easy Workout/Easy Workout-Info.plist
+++ b/Easy Workout/Easy Workout-Info.plist
@@ -14,12 +14,13 @@
 		<dict>
 			<key>CFBundleIconFiles</key>
 			<array>
-				<string>icon.png</string>
+				<string>Icon.png</string>
+				<string>Icon@2x.png</string>
 			</array>
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.aryaxt.iworkout.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.aryaxt.easyWorkout</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
